# fireauth2

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yaml  docker-compose.yml  rustfmt.toml  typos.toml
.github/workflows/: add_notice.yaml  build_and_release.yaml  bump_version.yaml  cargo_attribution.yaml  cargo_deny.yaml  cargo_semver_checks.yaml  cargo_update.yaml  check_msrv.yaml  ci.yaml  crate_type.yaml  publish.yaml  update_msrv.yaml
docs/: 01_getting_started.md  02_authorization.md  03_exchange_authorization_code.md  04_token_exchange.md  05_token_revocation.md  06_securing_firestore_data.md  07_proactive_refresh.md
fireauth2/: Cargo.toml  README.md
fireauth2-server/: Cargo.toml  Dockerfile  README.md
fireauth2-server/src/: error.rs  main.rs
fireauth2-server/src/models/: google_user.rs
fireauth2-server/src/utils/: env.rs  logger.rs  macros.rs  mod.rs
fireauth2-server/src/web/: mod.rs  session.rs  state.rs
fireauth2-server/src/web/extractors/: fireauth.rs  fireauth2.rs  mod.rs  redirect_uri.rs
fireauth2-server/src/web/routes/: authorize.rs  callback.rs  introspect.rs  revoke.rs  token.rs
fireauth2-server/src/web/utils/: mod.rs
fireauth2/src/: error.rs  fireauth.rs  lib.rs
fireauth2/src/client/: config.rs  google.rs  introspection.rs  mod.rs  revocation.rs
fireauth2/src/client/authorization/: flow.rs  mod.rs  scope.rs
fireauth2/src/client/authorization/extra_params/: access_type.rs  extra_param.rs  include_granted_scopes.rs  mod.rs  prompt.rs
fireauth2/src/client/types/: authorization.rs  exchange.rs  extra_fields.rs  extra_params.rs  introspection.rs  mod.rs  redirect.rs
fireauth2/src/models/: google_user.rs
fireauth2/src/repositories/: google_user.rs  mod.rs
src/: error.rs  lib.rs  main.rs
src/client/: config.rs  google.rs  mod.rs  types.rs
src/client/types/: authorization.rs  exchange.rs  extra_fields.rs  extra_params.rs  mod.rs  redirect.rs
src/models/: user.rs
src/utils/: env.rs  logger.rs  macros.rs
src/web/: mod.rs  session.rs  state.rs
src/web/extractors/: mod.rs
src/web/repositories/: user.rs
src/web/routes/: authorize.rs  callback.rs  index.rs  introspect.rs  mod.rs  revoke.rs  token.rs
