[package]
name = "fireauth2"
version = "0.1.0"
edition = "2024"
description = "OAuth 2.0 Rust server for Google Sign-In with first-class Firebase Authentication support"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekkolon/fireauth2"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
firestore = "0.45.0"
futures = "0.3.30"
google-oauth = "1.11.3"
jsonwebtoken = "9.3.1"
log = "0.4.21"
oauth2 = "5.0.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"

[profile.release]
opt-level = "z"
debug = false
codegen-units = 1
panic = "abort"
strip = "debuginfo"
