[workspace]
resolver = "3"
members = ["fireauth2", "fireauth2-server"]

[workspace.package]
rust-version = "1.85"
version = "0.1.0"
edition = "2024"
license-file = "./LICENSE"
repository = "https://github.com/ekkolon/fireauth2"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"


# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
